# 42-API-Client

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
API42Client/: auth.py  authenticator.py
