[metadata]
name = API42Client
version = 0.0.1
author = Abdelaali ES SALMI
author_email = abdlalisalmi@gmail.com
description = 42 API Client is a small project to simplify the usage of the 42 School API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/API42Client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True